--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
     "require": {
         "php": "^5.5.9 || ^7.0 || ^8.0",
         "paragonie/random_compat": "^1 || ^2 || ^9",
-        "symfony/form": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/security-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/templating": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/translation": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/twig-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/validator": "^2.8 || ^3.0 || ^4.0 || ^5.0 ",
+        "symfony/form": "^2.8 || ^3.0 || ^4.0 || ^5.2",
+        "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0 || ^5.2",
+        "symfony/security-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0 || ^5.2",
+        "symfony/templating": "^2.8 || ^3.0 || ^4.0 || ^5.0 || ^5.2",
+        "symfony/translation": "^2.8 || ^3.0 || ^4.0 || ^5.0 || ^5.2",
+        "symfony/twig-bundle": "^2.8 || ^3.0 || ^4.0 || ^5.0 || ^5.2",
+        "symfony/validator": "^2.8 || ^3.0 || ^4.0 || ^5.0 || ^5.2",
         "twig/twig": "^1.28 || ^2.0 || ^3.0"
     },
     "require-dev": {
