--- a/.travis.yml
+++ b/.travis.yml
@@ -57,9 +57,14 @@ matrix:
       env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.1.2 SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.2
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
     - php: 8.0
-      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.2
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+
+    - php: 7.4
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+    - php: 8.0
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
 
     - php: 7.4
       env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
