--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ cache:
 env:
   global:
     - PACKAGE_VERSION=""
+    - PACKAGE_COMMIT_ID=""
     - PHPUNIT_FLAGS="-v"
     - PHPUNIT_VERSION=""
     - SIMPLE_PHPUNIT_INSTALL="true"
+    - SYMFONY_SHOW_VERSION="true"
     - SYMFONY_PHPUNIT_DIR="$HOME/symfony-bridge/.phpunit"
 
 matrix:
@@ -57,19 +59,19 @@ matrix:
       env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.1.2 SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
     - php: 8.0
-      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
     - php: 8.0
-      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
     - php: 8.0
-      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION=^2.1.3
+      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
 
     # Latest commit to master
     - php: 7.4
@@ -86,6 +88,8 @@ before_install:
   - if ! [ -z "$PACKAGE_VERSION" ]; then git pull --tags; export TAG=$(git tag 2> /dev/null | grep $(git tag | sed -e 's/^.//' | grep "$PACKAGE_VERSION" | tail -n1)); fi;
   - echo ${TAG}
   - if ! [ -z "$TAG" ]; then git checkout tags/${TAG} -b ${TAG}; fi;
+  - echo ${PACKAGE_COMMIT_ID}
+  - if [ -z "$TAG" ] && [ ! -z "$PACKAGE_COMMIT_ID" ] ; then git checkout ${PACKAGE_COMMIT_ID}; fi;
   - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
   - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
   - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
@@ -96,6 +100,7 @@ install:
   - echo ${COMPOSER_FLAGS}
   - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
   - echo ${SIMPLE_PHPUNIT_INSTALL}
+  - if ! [ -z "$SYMFONY_SHOW_VERSION" ]; then cat vendor/symfony/symfony/src/Symfony/Component/HttpKernel/Kernel.php | grep -w 'VERSION' | awk '{print $4}' | sed "s/[;']//g"; fi;
   - if ! [ -z "$SIMPLE_PHPUNIT_INSTALL" ]; then ./vendor/bin/simple-phpunit install; fi;
 
 script:
