--- a/.travis.yml
+++ b/.travis.yml
@@ -59,24 +59,24 @@ matrix:
       env: DEPENDENCIES="symfony/lts:^3" PACKAGE_VERSION=^2.1.2 SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak 
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION='5.0.*'
 #PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
     - php: 8.0
-      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak 
+      env: SYMFONY_VERSION='5.0.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION='5.0.*'
 #PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak 
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION='5.1.*'
 #PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
     - php: 8.0
-      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak 
+      env: SYMFONY_VERSION='5.1.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION='5.1.*'
 #PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
 
     - php: 7.4
-      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak 
+      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION='5.2.*'
 #PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
     - php: 8.0
-      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak 
+      env: SYMFONY_VERSION='5.2.*' SYMFONY_DEPRECATIONS_HELPER=weak PACKAGE_VERSION='5.2.*'
 #PACKAGE_COMMIT_ID=10db25074bb4f7fcd4e7982020eeeae3273159cd
 
     # Latest commit to master
